# pandoc-server

./: LICENSE  README.md  pandoc-server.cabal  stack.yaml
app/: Main.hs  MainCGI.hs
src/: Lib.hs
test/: Spec.hs
