cabal-version:  1.12
name:           pandoc-server
version:        0.1.0.0
description:    Simple server for pandoc conversions.
homepage:       https://github.com/githubuser/pandoc-server#readme
bug-reports:    https://github.com/githubuser/pandoc-server/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2021 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/pandoc-server

library
  exposed-modules:
      Lib
  other-modules:
      Paths_pandoc_server
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , servant-server
    , wai
    , text
    , pandoc
  ghc-options: -Wall
  default-language: Haskell2010

executable pandoc-server
  main-is: Main.hs
  other-modules:
      Paths_pandoc_server
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , pandoc-server
    , servant-server
    , wai
    , wai-logger
    , warp
  default-language: Haskell2010

test-suite pandoc-server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pandoc_server
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , bytestring
    , base
    , hspec
    , hspec-wai
    , hspec-wai-json
    , pandoc-server
    , servant-server
    , wai
    , wai-extra
    , warp
    , http-types
  ghc-options: -Wall
  default-language: Haskell2010
